<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_margin="20dp"
    tools:context=".passingDataBmi.IntentActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hasil"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textStyle="bold"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/umur"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/panah"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tv_hasil_umur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hasil_umur"
                android:textColor="@color/grey"
                android:textSize="15sp"
                android:textStyle="bold"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tinggi_badan"
                android:textSize="15sp"
                android:layout_marginRight="10dp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/panah"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tv_hasil_tinggi_badan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hasil_tinggi_badan"
                android:textColor="@color/grey"
                android:textSize="15sp"
                android:textStyle="bold"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/berat_badan"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/panah"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tv_hasil_berat_badan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hasil_berat_badan"
                android:textColor="@color/grey"
                android:textSize="15sp"
                android:textStyle="bold"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bmi"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/panah"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tv_hasil_bmi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hasil_bmi"
                android:textColor="@color/grey"
                android:textSize="15sp"
                android:textStyle="bold"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kategori"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/panah"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tv_hasil_kategori"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hasil_kategori"
                android:textColor="@color/grey"
                android:textSize="15sp"
                android:textStyle="bold"/>
        </TableRow>
    </TableLayout>

</LinearLayout>